--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ Press Ctrl + D to save this page as a bookmark and easily access the latest VIPB
 
       <div class="stream-grid">
         <!-- Stream Box 1 -->
-        <a href="https://v2.sportsonline.pro/" class="stream-box">
+        <a href="https://watch.soccerplayz.store/" class="stream-box">
           <div class="stream-left">VIPBox SOCCER</div>
           <div class="stream-right">
             ● ONLINE
@@ -182,7 +182,7 @@ Press Ctrl + D to save this page as a bookmark and easily access the latest VIPB
         </a>
 
         <!-- Stream Box 2 -->
-        <a href="https://v2.sportsonline.pro/" class="stream-box">
+        <a href="https://watch.soccerplayz.store/" class="stream-box">
           <div class="stream-left">VIPBox HD</div>
           <div class="stream-right">
             ● ONLINE
@@ -196,7 +196,7 @@ Press Ctrl + D to save this page as a bookmark and easily access the latest VIPB
         </a>
 
         <!-- Stream Box 3 -->
-        <a href="https://v2.sportsonline.pro/" class="stream-box">
+        <a href="https://watch.soccerplayz.store/" class="stream-box">
           <div class="stream-left">VIPBox FHD</div>
           <div class="stream-right">
             ● ONLINE
